--- a/eink.yaml
+++ b/eink.yaml
@@ -117,7 +117,9 @@ display:
     model: 7.50inV2alt
     cs_pin: GPIO15
     dc_pin: GPIO27
-    busy_pin: GPIO25
+    busy_pin:
+      number: GPIO25
+      inverted: true
     reset_pin: GPIO26
     reset_duration: 2ms
     rotation: 270
